--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\saif0\AppData\Local\Temp\testng-eclipse--2054201817\testng-customsuite.xml</span>
+                    <span>C:\Users\saif0\AppData\Local\Temp\testng-eclipse--1882967430\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -108,17 +108,7 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Test.MyTestCases" class="method navigator-link" hash-for-method="TakeAscreenShot">TakeAscreenShot</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Test.MyTestCases" class="method navigator-link" hash-for-method="addData">addData</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Test.MyTestCases" class="method navigator-link" hash-for-method="deleteData">deleteData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -153,23 +143,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="TakeAscreenShot">
-                  </a> <!-- TakeAscreenShot -->
-                  <span class="method-name">TakeAscreenShot</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="addData">
                   </a> <!-- addData -->
                   <span class="method-name">addData</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="deleteData">
-                  </a> <!-- deleteData -->
-                  <span class="method-name">deleteData</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -184,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\saif0\AppData\Local\Temp\testng-eclipse--2054201817\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\saif0\AppData\Local\Temp\testng-eclipse--1882967430\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -233,32 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Calender')
 data.setCell(0, 2, 'Test.MyTestCases')
-data.setCell(0, 3, 5482);
+data.setCell(0, 3, 5811);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'TakeAscreenShot')
+data.setCell(1, 1, 'addData')
 data.setCell(1, 2, 'Test.MyTestCases')
-data.setCell(1, 3, 4504);
+data.setCell(1, 3, 35);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'deleteData')
+data.setCell(2, 1, 'updateData')
 data.setCell(2, 2, 'Test.MyTestCases')
-data.setCell(2, 3, 60);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'addData')
-data.setCell(3, 2, 'Test.MyTestCases')
-data.setCell(3, 3, 52);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'updateData')
-data.setCell(4, 2, 'Test.MyTestCases')
-data.setCell(4, 3, 19);
+data.setCell(2, 3, 11);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -273,33 +241,37 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">11 ignored methods</span>
+            <span class="header-content">13 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">Test.MyTestCases</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">openWindow</span>
-                <br/>
-                <span class="ignored-method-name">theTable</span>
-                <br/>
-                <span class="ignored-method-name">RadioButton</span>
+                <span class="ignored-method-name">AlertAndConfirm</span>
                 <br/>
                 <span class="ignored-method-name">DynamicDropDownList</span>
                 <br/>
+                <span class="ignored-method-name">EnableAndDisable</span>
+                <br/>
                 <span class="ignored-method-name">Select_Tag</span>
                 <br/>
-                <span class="ignored-method-name">openTab</span>
+                <span class="ignored-method-name">RadioButton</span>
                 <br/>
-                <span class="ignored-method-name">EnableAndDisable</span>
+                <span class="ignored-method-name">MouseHover</span>
+                <br/>
+                <span class="ignored-method-name">TakeAscreenShot</span>
                 <br/>
                 <span class="ignored-method-name">HideAndShow</span>
                 <br/>
-                <span class="ignored-method-name">AlertAndConfirm</span>
+                <span class="ignored-method-name">openTab</span>
+                <br/>
+                <span class="ignored-method-name">theTable</span>
+                <br/>
+                <span class="ignored-method-name">openWindow</span>
+                <br/>
+                <span class="ignored-method-name">deleteData</span>
                 <br/>
                 <span class="ignored-method-name">CheckBox</span>
-                <br/>
-                <span class="ignored-method-name">MouseHover</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -318,23 +290,15 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">addData</span>
-                <span class="method-start">8381 ms</span>
+                <span class="method-start">15824 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">updateData</span>
-                <span class="method-start">8442 ms</span>
+                <span class="method-start">15867 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Calender</span>
-                <span class="method-start">8467 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">deleteData</span>
-                <span class="method-start">13951 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">TakeAscreenShot</span>
-                <span class="method-start">14015 ms</span>
+                <span class="method-start">15885 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
