--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,536</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,710</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">Test.MyTestCases</td><td><a href="#m0">Calender</a></td><td rowspan="1">1753303844761</td><td rowspan="1">5482</td></tr><tr class="passedeven"><td><a href="#m1">TakeAscreenShot</a></td><td rowspan="1">1753303850309</td><td rowspan="1">4504</td></tr><tr class="passedeven"><td><a href="#m2">addData</a></td><td rowspan="1">1753303844675</td><td rowspan="1">52</td></tr><tr class="passedeven"><td><a href="#m3">deleteData</a></td><td rowspan="1">1753303850245</td><td rowspan="1">60</td></tr><tr class="passedeven"><td><a href="#m4">updateData</a></td><td rowspan="1">1753303844736</td><td rowspan="1">19</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Test.MyTestCases</td><td><a href="#m0">Calender</a></td><td rowspan="1">1754145817533</td><td rowspan="1">5811</td></tr><tr class="passedeven"><td><a href="#m1">addData</a></td><td rowspan="1">1754145817472</td><td rowspan="1">35</td></tr><tr class="passedeven"><td><a href="#m2">updateData</a></td><td rowspan="1">1754145817515</td><td rowspan="1">11</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">Test.MyTestCases#Calender</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Test.MyTestCases#TakeAscreenShot</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Test.MyTestCases#addData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">Test.MyTestCases#deleteData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">Test.MyTestCases#updateData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test.MyTestCases#addData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test.MyTestCases#updateData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
